[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/MagicBolt.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PlayerMagic.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 6 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="PlayerMagic" type="Area2D" groups=["magicBullet"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
playing = true

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_PlayerMagic_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerMagic_body_entered"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
